[package]
name = "battlelayer"
version = "0.1.0"
authors = ["avitex <theavitex@gmail.com>"]
edition = "2018"

[dependencies]
regex = "1"
bytes = "0.5"

futures-core-preview = "0.3.0-alpha.19"
futures-channel-preview = "0.3.0-alpha.19"
futures-util-preview = { version = "0.3.0-alpha.19", features = ["sink", "select-macro"] }

tokio = "0.3.3"
tokio-io = { version = "0.2.0-alpha.6", features = ["util"] }
tokio-net = { version = "0.2.0-alpha.6", features = ["tcp"] }
tokio-codec = "0.2.0-alpha.6"
tokio-executor = "0.2.0-alpha.6"

tower-util = "0.3.0-alpha.1"
tower-service = "0.3.0-alpha.2"
